<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shaping_buttons_grey"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_overview"
            android:textColor="#adadad"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/text_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/text_overview"
            android:textColor="#adadad"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="55dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_released"
        android:layout_width="155dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shaping_buttons_grey"
        android:text="@string/movie_released"
        android:textAlignment="center"
        android:textColor="#adadad"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/text_revenue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/text_movie_released"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/text_movie_released"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/text_movie_revenue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_released" />

    <TextView
        android:id="@+id/text_revenue"
        android:background="@drawable/shaping_buttons_grey"
        android:layout_width="155dp"
        android:layout_height="32dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/movie_text_revenue_title"
        android:textAlignment="center"
        android:textColor="#adadad"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_released"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/text_movie_revenue"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="31dp"
        android:gravity="center"
        android:text="@string/text_movie_popularity"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_movie_released"
        app:layout_constraintTop_toBottomOf="@+id/text_revenue" />

</android.support.constraint.ConstraintLayout>